<resources>
    <string name="SerahApp">My Application</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="serahapp">SerahApp</string>
    <string name="username">Username</string>
    <string name="todo">TODO</string>
    <string name="buat_akun">Buat Akun</string>
    <string name="passwordnya">Passwordnya</string>
    <string name="cancel">Cancel</string>
    <string name="lewati">lewati</string>
</resources>
